    author name within brakets and the comment:

S <mave> comment goes here

   where S can be one of the following symbols:
    '+' : means that something has been added to NNFW
    '-' : means that something has been dropped from NNFW
    'B' : means a BugFix
    'C' : means that something has been changed (e.g. implementation of a Class or a signature method)
==== End of Legend ====
    ==> 119 - 27/10/2006 <==

C <mave> updated the ToDo List
C <mave> also <outputfunction> tag is correctly parsed
+ <mave> Factory now manage (create/register) OutputFunction classes
- <mave> deprecated all input stream operator
+ <mave> now OutputFunction, Cluster and Linker are properly managed by '<<' operators
+ <mave> added method for creating subclasses of OutputFunction from a PropertySettings map
C <mave> moved implementation of subclasses of OutputFunction from .h to .cpp file
+ <mave> added method setProperties to Propertized class

    ==> 117 - 27/10/2006 <==

C <mave> resolved bug in sparsematrixlinker.h

    ==> 116 - 27/10/2006 <==

C <mave> bugfix in parsing <order> tag

    ==> 115 - 27/10/2006 <==

C <mave> added random.h to includes presents in nnfw.h

    ==> 114 - 25/10/2006 <==

C <mave> a little change in parsing <cluster> ;-)

    ==> 113 - 25/10/2006 <==

C <mave> due to problems to elaborate xmlChar* strings of libxml2, I used the QT library for parsing
        xml files; Now, the NNFW depends on QT-4

    ==> 105 - 25/10/2006 <==

C <mave> improved the new style of Doxygen documentation

    ==> 104 - 25/10/2006 <==

C <mave> updated Doxygen to version 1.5.0 and restyled

    ==> 103 - 17/10/2006 <==

- <mave> Dropped make targets: distclean, apidoc, apidoc-clean (these doesn't support out-source buildings)
- <mave> Dropped the support for QMake compilation procedure
C <mave> Starting implementation of load/save operation from XML files;
            used libxml2 for parsing the XML files;
            modified CMakeList.txt to link against libxml2